# helix

./: .env.example  LICENSE  README.md  main.py  pyproject.toml
chrome_extension/: README.md  content.js  manifest.json  popup.html  popup.js
frontend/: .env.example  .gitignore  README.md  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/delete/: route.ts
frontend/src/app/api/download/: route.ts
frontend/src/app/api/files/: route.ts
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/assets/: index.ts
frontend/src/components/: app-sidebar.tsx  cta.tsx  dashboard-nav.tsx  demo-video.tsx  features.tsx  footer.tsx  navbar.tsx  shiny.tsx
frontend/src/components/ui/: aurora-text.tsx  button.tsx
frontend/src/lib/: auth.ts  env.ts
helix-cli/: README.md  index.js  package.json
helix-mcp/: .dev.vars.example  package-lock.json  worker-configuration.d.ts  wrangler.jsonc
helix-mcp-docker/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
helix-mcp-docker/src/: index.ts
helix-mcp-remote/: .gitignore  README.md  package.json
helix-mcp-remote/src/: index.ts
helix-mcp/docker-catalog/: helix-remote.yaml
helix-mcp/src/: github-handler.ts  index.ts
service/: .env.example  .gitignore  README.md  pyproject.toml
service/src/: app.py  schema.py
service/src/utils/: __init__.py  agent.py  clerk.py  db.py  process_helper.py  tools.py  url_helper.py
src/: app.py
src/utils/: __init__.py  ai.py  db.py  media_helper.py  process_helper.py  url_helper.py
(+6 files in other folders)
