[project]
name = "helix-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "cerebras-cloud-sdk>=1.50.1",
    "fastapi>=0.118.0",
    "google-cloud-firestore>=2.21.0",
    "httpx>=0.28.1",
    "markdownify>=1.2.0",
    "markitdown[all]>=0.1.3",
    "mcp>=1.16.0",
    "openai>=2.0.0",
    "pydantic>=2.11.9",
    "pygithub>=2.8.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "tweepy>=4.16.0",
    "uvicorn>=0.37.0",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=1.0.3",
]
